<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.RationaleActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/rationaleTitle"
        android:id="@+id/rationaleTitle"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true" />

    <ScrollView
        android:id="@+id/rationaleScroll"
        style="@android:style/Widget.DeviceDefault.Light.ScrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rationaleTitle"
        android:layout_marginTop="20dp"
        android:fadeScrollbars="false"
        android:fillViewport="false"
        android:scrollbarStyle="outsideInset">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/rationale1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rationale1"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/rationale2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:text="@string/rationale2"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/rationale3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rationale3"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/rationale4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:text="@string/rationale4"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/rationale5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rationale5"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
